Bug 117307 - EDITING Comments in headers are duplicated after Row delete and Undo
Summary: EDITING Comments in headers are duplicated after Row delete and Undo
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.7.2 release
Hardware: All All
: medium normal
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Undo-Redo
  Show dependency treegraph
 
Reported: 2018-04-28 07:35 UTC by Emil Tanev
Modified: 2024-12-13 02:13 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
file (10.31 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2018-04-28 07:35 UTC, Emil Tanev
Details
Bibisect log (14.93 KB, text/plain)
2018-04-28 16:36 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emil Tanev 2018-04-28 07:35:36 UTC
Created attachment 141733 [details]
file

Open the attached file in Calc
Add Filter --> Not empty on Column A
Select spreadsheet rows 1 through 28
Right-click - Delete rows
Ctrl + Z (Undo)

Bug: Extra comment boxes are added in addition to the original comments (around 19sec in the video)

https://screencast-o-matic.com/watch/cFfuivbDVq

Version: 6.0.5.0.0+
Build ID: e58dc868a6ac0df24adf88f32f90a9e4fc6fdae9
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86@42, Branch:libreoffice-6-0, Time: 2018-04-19_23:05:52
Locale: en-US (en_US); Calc: group
Comment 1 raal 2018-04-28 11:45:39 UTC
confirm with current master. Regression, but unable to bisect with bibisect-linux-64-5.4 because LO crashes during bibisect.
Comment 2 Telesto 2018-04-28 16:36:00 UTC Comment hidden (bibisection)
Comment 3 Xisco Faulí 2018-05-03 08:28:17 UTC
Regression introduced by:

author	Markus Mohrhard <markus.mohrhard@googlemail.com>	2017-04-09 22:13:24 +0200
committer	Markus Mohrhard <markus.mohrhard@googlemail.com>	2017-04-11 00:34:47 +0200
commit eefe13c77d01be37c911e75af191717a944fedb3 (patch)
tree 1c4d7e9e698446e95ce9c63ecaf65474e0303913
parent 091a0dd416171393d939aac924433063a68967b0 (diff)
shrinking the DB area just causes problems, tdf#89546

Bisected by reverting the commit locally.

Adding Cc: to Markus Mohrhard
Comment 4 Xisco Faulí 2018-05-03 08:35:18 UTC
@Eike, since you fixed tdf#113537, I thought you might be interested in this issue...
Comment 5 Xisco Faulí 2018-12-12 13:11:31 UTC
Hi Mike,
Since you fixed bug 117332 which was introduced by the same commit, I thought you could be interested in this issue...
Comment 6 QA Administrators 2020-12-12 03:47:58 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2022-12-13 03:19:20 UTC Comment hidden (obsolete)
Comment 8 Commit Notification 2023-07-21 23:09:07 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ade2565cc2b2e5e8cf35fe828bf85649f7ff593a

tdf#117307 sc: Comments are duplicated after Row delete and Undo

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-07-25 08:30:17 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/eec038b982b4672ac8feb030cb6bae546fa8c901

tdf#117307 sc: Comments are duplicated after Row delete and Undo

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 NISZ LibreOffice Team 2023-07-28 06:31:52 UTC
Verified in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cf8f7b91f41821b79495c0388359c4cb1156ea67
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded