tdf#117307 sc: Comments are duplicated after Row delete and Undo

The comment was cloned if you deleted and restored its filtered cell.
During Undo, the comment was cloned even if it was for the
same cell, resulting duplicated comments there.

Regression from commit eefe13c77d01be37c911e75af191717a944fedb3
"shrinking the DB area just causes problems, tdf#89546".

Change-Id: I86d0813c56ba63370aae6b5f7807a19747e2378c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153803
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>